fixing navbar can't hide on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6213,7 +6213,12 @@ fieldset:disabled .btn {
   }
 
   .navbar-nav {
-    padding: 20px 0 20px 0;
+    padding: 25px 0;
+    align-items: center;
+  }
+
+  #navbarNav>a {
+    display: none;
   }
 }
 
